--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html lang="">
+    <head>
+        <meta charset="utf-8">
+        <meta name="Gabriels Portfolio">
+        <meta name="author" content="SitePoint">
+        <link rel="stylesheet" href="">
+    </head>
+    
+    <body class="body">
 
+    </body>
+</html>
