--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
         <meta charset="utf-8">
         <meta name="Gabriels Portfolio">
         <meta name="author" content="SitePoint">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" type="text/css" href="assets/styles.css">
     </head>
     
-    <body class="body">
-
+    <body>
+        <div class="container">
+            <img class="img" src="images/pticon.gif">
+        </div>
     </body>
 </html>
