--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
         <meta name="author" content="SitePoint">
         <link rel="stylesheet" type="text/css" href="assets/styles.css">
         <link href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou" rel="stylesheet">
+        <title>welcome...</title>
     </head>
 
     <body>
-
+        <!--Different site pathway icons-->
         <div class="icons">
             <a class="header-link" href="index.html">
                 <img href="index.html" class="icon" src="images/homeicon.png">
@@ -24,9 +25,9 @@
                 <span class="icon-text">contact</span>
             </a>  
         </div>
+        <!--index art-->
         <div class="container">
             <img class="img" src="images/pticon.gif">
         </div>
-
     </body>
 </html>
