--- a/index.html
+++ b/index.html
@@ -6,28 +6,42 @@
         <meta name="author" content="SitePoint">
         <link rel="stylesheet" type="text/css" href="assets/styles.css">
         <link href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <title>welcome...</title>
     </head>
-
     <body>
         <!--Different site pathway icons-->
         <div class="icons">
-            <a class="header-link" href="index.html">
+            <a class="icon-links" href="index.html">
                 <img href="index.html" class="icon" src="images/homeicon.png">
                 <span class="icon-text">about</span>
             </a>
-            <a class="header-link" href="index.html">
+            <a class="icon-links" href="index.html">
                 <img class="icon" src="images/portfolioicon.png">
                 <span class="icon-text">portfolio</span>
             </a>
-            <a class="header-link" href="index.html">
+            <a class="icon-links" href="index.html">
                 <img class="icon" src="images/contacticon.png">
                 <span class="icon-text">contact</span>
             </a>  
         </div>
-        <!--index art-->
+        <!--Introduction information-->
+        <div class="col-jumbotron" id="intro-header">
+            <div class="container">
+                <h1 class="display-4 border border-white rounded" id="intro-text-title">Introduction</h1>
+                <p class="text-center" id="intro-text">My personal career mission is to become a full stack developer and enter cyber security. The vision I have for myself is to develop my career, and better myself over time. I'm here to have an everlasting positive and inspiring impact on the people around me.</p>
+            </div>
+        </div>
+        <!--Index art-->
         <div class="container">
             <img class="img" src="images/pticon.gif">
         </div>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="javascript/wordanimation.js"></script>
     </body>
 </html>
