Revert "Merge pull request #5 from Stallionv35/UI"
This reverts commit 796b0ebfced7c8534bc5637c19d827dc85893fb3, reversing
changes made to 67ce8559a2a07138cba0916395955e0ccbc572d7.

--- a/index.html
+++ b/index.html
@@ -31,10 +31,8 @@
         <!--Introduction information-->
         <div class="col-jumbotron" id="intro-header">
             <div class="container">
-                <h1 class="display-4" id="intro-text-title">Introduction.</h1>
-                <p class="text-center" id="intro-text">
-                    A brief introduction to who I am. My name is Gabriel Waldron and I’m studying software and development. I’m growing up in the midst of an exciting technological era, and I’m ready to put myself out there to achieve great things. In this new age of technology time isn’t slowing down for anyone. I’m ready to leave my legacy and make a promise to myself that many people will remember my name. Even though sometimes I find myself struggling in the end you always have to realize that the problem is you and you’re your own solution. As said by dylan thomas: “Do not go gentle into that good night rage rage against the dying of the light.”
-                </p>
+                <h1 class="display-4 border border-white rounded" id="intro-text-title">Introduction</h1>
+                <p class="text-center" id="intro-text">My personal career mission is to become a full stack developer and enter cyber security. The vision I have for myself is to develop my career, and better myself over time. I'm here to have an everlasting positive and inspiring impact on the people around me.</p>
             </div>
         </div>
         <!--Index art-->
@@ -44,5 +42,6 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="javascript/wordanimation.js"></script>
     </body>
 </html>
