--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="container">
                 <h1 class="display-4" id="intro-text-title">Introduction.</h1>
                 <p class="text-center" id="intro-text">
-                    A brief introduction to who I am. My name is Gabriel Waldron and I’m studying software and development. I’m growing up in the midst of an exciting technological era, and I’m ready to put myself out there to achieve great things. In this new age of technology time isn’t slowing down for anyone. I’m ready to leave my legacy and make a promise to myself that many people will remember my name. Even though sometimes I find myself struggling in the end you always have to realize that the problem is you and you’re your own solution. As said by dylan thomas: “Do not go gentle into that good night rage rage against the dying of the light.”
+                    A brief introduction to who I am. My name is Gabriel Waldron and I’m studying software and development. I’m growing up in the midst of an exciting technological era, and I’m ready to put myself out there to achieve great things. In this new age of technology time isn’t slowing down for anyone. I’m ready to leave my legacy and make a promise to myself that many people will remember my name. Even though sometimes I find myself struggling in the end you always have to realize that the problem is you and you’re your own solution. As said by dylan thomas: “Do not go gentle into that good night rage, rage against the dying of the light.”
                 </p>
             </div>
         </div>
